# prumysl-40-data-server

./: .gitignore  README.md  data.sqlite  main.py  pyproject.toml  requirements.txt
File-Help/: Prompt.txt
backend/: __init__.py  modbus_client.py  models.py  opc_client.py  poller.py
frontend/static/: style.css
frontend/templates/: base.html  dashboard.html  device_detail.html  device_form.html
frontend/templates/partials/: dashboard_table.html  poll_result.html
