[project]
name = "pumysl40-data-server"
version = "1.0.0"
description = "Centrální sběrný server pro průmyslová data (Industry 4.0)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "sqlmodel>=0.0.14",
    "jinja2>=3.1.3",
    "asyncua>=1.0.6",
    "pymodbus>=3.6.3",
]

[project.scripts]
data-gateway = "main:app"

[tool.uv]
dev-dependencies = []
